# grairc

./: Cargo.toml  Dockerfile  README.md  cia.sh
.cargo/: config.toml
assets/battery/: charging.tga  critical.tga  drained.tga  high.tga  low.tga  medium.tga  verylow.tga
metadata/: grairc.rsf
src/: config.rs  grairc.rs  main.rs  state.rs
src/gfx/: mod.rs
src/gfx/eg/: eg.rs  mod.rs
src/gfx/renderers/: mod.rs
src/irc/: constants.rs  mod.rs  regex.rs  server.rs  types.rs
