[package]
name = "grairc"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
embedded-graphics = "0.8.1"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.44"
tinytga = "0.5.0"
tokio = "1.49.0"
toml = "0.9.11"
u8g2-fonts = { version = "0.7.2", features = ["embedded_graphics_textstyle"] }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
description = "grairc"
authors = ["electron271"]
icon_path = "metadata/icon.png"
